# ocd_classification

./: README.md  ocd_cnn_model.py  pyproject.toml
notebooks/: ocd_pipeline.ipynb
src/ocd_classification/: main.py
src/ocd_classification/data/: data_loader.py
src/ocd_classification/evaluate/: evaluate.py
src/ocd_classification/evaluate /: evaluate.py
src/ocd_classification/models/: cnn_model.py  evaluate.py  train.py
src/ocd_classification/preprocessing/: preprocess.py  wavelet.py
src/ocd_classification/trainers/: ml_trainer.py  nn_trainer.py
src/ocd_classification/trainers /: ml_trainer.py  nn_trainer.py
src/ocd_classification/utils/: utils.py
